# Algo-cli

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  algo-cli.cmd  algo-cli.ps1  fix_mojibake.py  pyproject.toml
.github/: dependabot.yml
algo_cli/: __init__.py  __main__.py  action_registry.py  ada_control_journal.py  ada_credential_registry.py  ada_supply_chain_manifest.py  ada_uninstall_recovery.py  agent_blocks.py  agent_context.py  agent_pipeline.py  agent_run_journal.py  agent_threads.py  alice_artifact_store.py  animations.py  argon_extensions_manifest.py  arthur_control_doctor.py  arthur_control_readiness.py  arthur_outcomes.py  austin_desktop_simulator.py  austin_install_finalizer.py  austin_release_packager.py  austin_thomas_binding.py  boron_browser_entry.py  boron_browser_isolation.py  boron_browser_wrapper.py  cache_admission.py  capability_mask.py  carbon_browser_binding.py  chat_protocol.py  chatgpt_auth.py  chatgpt_client.py  clara_effect_ledger.py  cli_config.py  code_rag.py  config.py  context_budget.py  context_supersession.py  credential_helpers.py  david_control_kernel.py  david_control_runtime.py  (+86 more)
benchmarks/: structural_rag.py
docs/: ALGO.md  algo-cli-algorithm-evidence-contract.md  algo-cli-competitive-rating-contract.md  algo-cli-execution-verification-contract.md  algo-cli-hot-path-perf-2026-06.md  algo-cli-memory-lifecycle-contract.md  algo-cli-rebrand-2026-06.md  arthur-hardening-master-plan.md  austin-native-control-contract.md  boron-browser-isolation-contract.md  david-control-kernel-contract.md  echo-veil-security-status.md  external-agent-store-operations.md  harness-extension-cleanup-recommendation.md  index-compute-lab-integration.md  inference-harness-loop-blueprint-2026-06.md  lessons-rebrand-algo-cli.md  main-split-map.md  memory-facts-algo-cli.md  privacy-and-context.md  provider-auth-recovery.md  public-release-checklist.md  quick-facts-algo-cli.md  rebrand-lessons.md  reflex-loop-v0.2.md  runtime-capability-catalog.md  t3-code-parity-2026-07.md  william-public-release-checklist.md
hardening/: ada-evidence-ledger.json  ada-m9-completion-audit.json  ada-native-crash-qualification.json  ada-signing-lifecycle-authorities.json  ada-signing-lifecycle-evidence.json  alice-native-capture-crash-qualification.json  grace-baseline-evidence.json  grace-m8-local-qualification.json  henry-freeze.toml  nathan-agent-runtime-qualification.json
harness-gateway/: go.mod  main.go  main_test.go
harness-indexer/: Cargo.toml
ollama_cli/: __init__.py
script/: austin_build_and_run.sh
scripts/: README-ingest-memory.md  ada_austin_signing_lifecycle_receipt.py  ada_supply_chain_manifest.py  arthur_control_doctor.py  arthur_m9_completion_audit.py  austin_native_package_audit.py  austin_release_packager.py  boron_browser_build_images.py  boron_browser_live_isolation.py  boron_browser_live_pipe.py  boron_browser_live_session.py  check_public_history.py  check_public_release.py  check_release_version.py  david_control_kernel_fuzzer.py  david_hardening_gate.py  henry_austin_ada_crash_qualification.py  henry_austin_alice_crash_qualification.py  henry_austin_lifecycle_authority_preflight.py  henry_austin_prepare_public_key.py  henry_austin_signing_provisioner.py  henry_austin_signing_runner.py  henry_boron_hosted_qualification.py  henry_github_hardening_readiness.py  henry_m8_qualification.py  ingest-algo-cli-memory.ps1  nathan_agent_runtime_qualification.py  oliver_control_uninstall.py  oliver_installed_source_parity.py  oliver_smoke_wheel_install.py  remember-perf-facts.txt  remember-rebrand-facts.txt  smoke_installed_release.py  smoke_wheel_install.py  xenon_browser_live_broker.py
skills/: README.md  algo-cli.md  edit-file-precision.md  harness-search-first.md  memory-recall-ritual.md  qol-algorithms.md  smart-error-recovery.md  tool-selection-cheatsheet.md
tests/: conftest.py  test_action_registry.py  test_ada_austin_signing_lifecycle_receipt.py  test_ada_control_journal.py  test_ada_credential_registry.py  test_ada_supply_chain_manifest.py  test_ada_uninstall_recovery.py  test_adversarial_audit.py  test_agent_blocks.py  test_agent_context.py  test_code_rag.py  (+174 more)
(+271 files in other folders)
